--- a/src/core/settings/lang/fa.json
+++ b/src/core/settings/lang/fa.json
@@ -15,7 +15,7 @@
     "deletesitefilestitle": "پاک‌کردن فایل‌های سایت",
     "deviceinfo": "اطلاعات دستگاه",
     "deviceos": "سیستم‌عامل دستگاه",
-    "disableall": "غیرفعال‌کردن اطلاعیه‌ها",
+    "disableall": "غیرفعال‌کردن اعلانات",
     "disabled": "غیر فعال",
 	"displayformat": "فرمت نمایش",
     "enabledebugging": "فعالسازی اشکالزدایی",
