Minir fa correction - Correct iPhone X margins - second try

--- a/platforms/ios/www/assets/lang/fa.json
+++ b/platforms/ios/www/assets/lang/fa.json
@@ -478,6 +478,7 @@
     "addon.mod_quiz.preview": "پیش‌نمایش",
     "addon.mod_quiz.previewquiznow": "پیش‌نمایش آزمون",
     "addon.mod_quiz.question": "سؤال",
+    "addon.mod_quiz.quiznavigation": "لیست سوالات",
     "addon.mod_quiz.quizpassword": "رمز دسترسی به آزمون",
     "addon.mod_quiz.reattemptquiz": "شرکت مجدد در آزمون",
     "addon.mod_quiz.returnattempt": "بازگشت و ادامهٔ آزمون",
