--- a/src/addon/mod/quiz/lang/fa.json
+++ b/src/addon/mod/quiz/lang/fa.json
@@ -28,6 +28,7 @@
     "preview": "پیش‌نمایش",
     "previewquiznow": "پیش‌نمایش آزمون",
     "question": "سؤال",
+	"quiznavigation": "لیست سوالات",
     "quizpassword": "رمز دسترسی به آزمون",
     "reattemptquiz": "شرکت مجدد در آزمون",
     "returnattempt": "بازگشت و ادامهٔ آزمون",
