--- a/platforms/ios/www/assets/lang/fa.json
+++ b/platforms/ios/www/assets/lang/fa.json
@@ -470,6 +470,7 @@
     "addon.mod_quiz.marks": "جمع نمره",
     "addon.mod_quiz.mustbesubmittedby": "تا پیش از {{$a}} باید پاسخ‌های خود را ثبت کنید.",
     "addon.mod_quiz.noquestions": "هنوز سؤالی اضافه نشده است",
+    "addon.mod_quiz.noreviewattempt": "شما مجاز به بررسی مجدد این آزمون نمی‌باشید",
     "addon.mod_quiz.outof": "{{$a.grade}} از {{$a.maxgrade}}",
     "addon.mod_quiz.outofpercent": "{{$a.grade}} از {{$a.maxgrade}} (٪{{$a.percent}})",
     "addon.mod_quiz.outofshort": "{{$a.grade}} از {{$a.maxgrade}}",
