--- a/src/addon/mod/quiz/lang/fa.json
+++ b/src/addon/mod/quiz/lang/fa.json
@@ -20,6 +20,7 @@
     "marks": "جمع نمره",
     "mustbesubmittedby": "تا پیش از {{$a}} باید پاسخ‌های خود را ثبت کنید.",
     "noquestions": "هنوز سؤالی اضافه نشده است",
+	"noreviewattempt": "شما مجاز به بررسی مجدد این آزمون نمی‌باشید",
     "outof": "{{$a.grade}} از {{$a.maxgrade}}",
     "outofpercent": "{{$a.grade}} از {{$a.maxgrade}} (٪{{$a.percent}})",
     "outofshort": "{{$a.grade}} از {{$a.maxgrade}}",
