--- a/src/core/mainmenu/lang/fa.json
+++ b/src/core/mainmenu/lang/fa.json
@@ -4,5 +4,6 @@
     "help": "راهنمایی",
     "logout": "خروج از سایت",
     "mycourses": "درس‌های من",
+	"togglemenu": "تغییر منو",
     "website": "پایگاه اینترنتی"
 }
