--- a/src/addon/mod/scorm/lang/fa.json
+++ b/src/addon/mod/scorm/lang/fa.json
@@ -6,35 +6,46 @@
     "browse": "پیش‌نمایش",
     "browsed": "به صورت پیش‌نمایش دیده شده",
     "browsemode": "حالت پیش‌نمایش",
+	"cannotcalculategrade": "امکان محاسبه نمره وجود ندارد.",
     "completed": "کامل شده",
     "contents": "محتویات",
+	"dataattemptshown": "این اطلاعات متعلق به تلاش شماره {{number}} می‌باشد.",
     "enter": "ورود",
+	"errorcreateofflineattempt": "هنگام ایجاد یک تلاش جدید بصورت آفلاین خطا رخ داده است. لطفا دوباره سعی کنید.",
+    "errordownloadscorm": "هنگام دریافت بسته اسکورم خطا رخ داده است : {{name}}",
+    "errorgetscorm": "هنگام دریافت اطلاعات اسکورم خطا رخ داده است.",
     "errorinvalidversion": "متاسفانه برنامه تنها از اسکورم ۱٫۲ پشتیبانی می‌کند.",
 	"errornotdownloadable": "دریافت بسته دوره آموزشی غیرفعال است. لطفا با مدیر سایت تماس بگیرید",
+	"errornovalidsco": "این بسته اسکورم فاقد هرگونه اسکو قابل مشاهده می‌باشد.",
     "errorpackagefile": "متاسفانه برنامه تنها از بسته‌های ZIP پشتیبانی می‌کند.",
+	"errorsyncscorm": "هنگام همسان‌سازی خطا رخ داده است. لطفا دوباره سعی کنید.",
     "exceededmaxattempts": "حداکثر تعداد تلاش‌ها را انجام داده‌اید.",
     "failed": "ناموفق",
-    "firstattempt": "اولین تلاش",
+    "firstattempt": "نمره اولین آزمون",
     "gradeaverage": "نمرهٔ میانگین",
-    "gradeforattempt": "نمرهٔ تلاش",
+    "gradeforattempt": "نمره آزمون",
     "gradehighest": "بالاترین نمره",
     "grademethod": "روش نمره‌دهی",
     "gradereported": "نمرهٔ گزارش شده",
     "gradescoes": "اهداف آموزشی",
     "gradesum": "جمع نمره",
-    "highestattempt": "بالاترین تلاش",
+    "highestattempt": "بالاترین نمره آزمون‌ها",
     "incomplete": "ناتمام",
-    "lastattempt": "آخرین تلاش",
+    "lastattempt": "نمره آخرین آزمون",
     "mode": "حالت",
     "newattempt": "شروع یک تلاش جدید",
-    "noattemptsallowed": "تعداد تلاش‌های مجاز",
-    "noattemptsmade": "تعداد تلاش‌هایی که انجام داده‌اید",
+    "noattemptsallowed": "تعداد مراجعات مجاز جهت مطالعه",
+    "noattemptsmade": "تعداد مراجعات جهت مطالعه",
     "normal": "معمولی",
     "notattempted": "شرکت صورت نگرفته است",
+	"offlineattemptnote": "اطلاعات این تلاش همسان‌سازی نشده است.",
+    "offlineattemptovermax": "امکان ثبت این تلاش وجود ندارد زیرا حداکثر تعداد تلاش‌های مجاز به پایان رسیده است.",
     "organizations": "سازمان‌ها",
     "passed": "موفق",
     "reviewmode": "حالت مرور",
-	"scormstatusnotdownloaded": "پس از فشردن کلید ورود دوره آموزشی دریافت خواهد شد",
+	"scormstatusnotdownloaded": "پس از فشردن کلید زیر، محتوای دوره آموزشی دریافت خواهد شد.",
 	"scormstatusoutdated": "محتوای این بسته اسکورم تغییر نموده است. پس از فشردن کلید ورود، مجددا این محتوا دریافت خواهد شد.",
-    "suspended": "معلق"
+    "suspended": "معلق",
+	"warningofflinedatadeleted": "قسمتی از اطلاعات مطالعه شماره {{number}} ذخیره نگردید زیرا بعنوان یک مطالعه جدید قابل قبول نبوده است.",
+    "warningsynconlineincomplete": "تعدادی از مطالعه‌ها همسان‌سازی نشده‌اند زیرا آخرین مطالعه آنلاین به اتمام نرسیده است. لطفا ابتدا مطالعه آنلاین خود را به اتمام برسانید."
 }
