--- a/src/addon/notifications/lang/fa.json
+++ b/src/addon/notifications/lang/fa.json
@@ -1,5 +1,6 @@
 {
-    "notificationpreferences": "تنظیمات اعلانات",
+    "errorgetnotifications": "هنگام دریافت اعلانات خطا رخ داده است.",
+	"notificationpreferences": "تنظیمات اعلانات",
     "notifications": "اعلانات",
 	"playsound": "آلارم صوتی",
     "therearentnotificationsyet": "هیچ اعلانی وجود ندارد."
