--- a/src/core/courses/lang/fa.json
+++ b/src/core/courses/lang/fa.json
@@ -1,11 +1,17 @@
 {
     "allowguests": "ورود کاربران مهمان به این درس مجاز است",
     "availablecourses": "درس‌های موجود",
+	"cannotretrievemorecategories": "طبقه‌‌های پایین‌تر از سطح {{$a}} قابل دسترسی نیستند.",
     "categories": "طبقه‌های درسی",
     "confirmselfenrol": "آیا مطمئنید که می‌خواهید خود را در این درس ثبت‌نام کنید؟",
+	"courseoverview": "پیش‌نمایش درس",
     "courses": "درس‌ها",
+	"downloadcourses": "دریافت درس‌ها",
     "enrolme": "ثبت‌نام من",
     "errorloadcourses": "در هنگام بارگیری درس‌ها خطایی رخ داد.",
+	"errorloadcourses": "هنگام دریافت درس‌ها خطا رخ داده است.",
+    "errorsearching": "هنگام جستجو خطا رخ داده است.",
+    "errorselfenrol": "هنگام ثبت‌نام خود، خطا رخ داده است. ",
     "filtermycourses": "پالایش درس‌های من",
     "frontpage": "صفحهٔ اول",
     "future": "آینده",
@@ -17,18 +23,22 @@
     "nocourses": "درسی وجود ندارد",
     "nocoursesfuture": "هیچ درسی برای آینده وجود ندارد",
     "nocoursesinprogress": "هیچ درسِ درجریانی وجود ندارد",
+	"nocoursesoverview": "هیچ درسی وجود ندارد",
     "nocoursespast": "هیچ درسی برای گذشته وجود ندارد",
     "nocoursesyet": "درسی در این طبقه وجود ندارد",
     "noevents": "هیچ مهلتی برای فعالیت‌های آتی وجود ندارد",
     "nosearchresults": "نتایجی برای جستجوی شما وجود نداشت.",
     "notenroled": "شما در این درس ثبت‌نام نیستید",
+	"notenrollable": "شما نمیتوانید خودتان را در این درس ثبت‌نام نمایید.",
     "password": "رمز ورود",
     "past": "گذشته",
     "paymentrequired": "ثبت‌نام در این درس مستلزم پرداخت شهریه است.",
-    "pluginname": "نمای کلی درس",
-    "recentlyoverdue": "",
+    "recentlyoverdue": "اخیرا مهلت آن به پایان رسیده است",
     "search": "جستجو...",
     "searchcourses": "جستجو بین درس‌ها",
+	"searchcoursesadvice": "شما می‌توانید با استفاده از کلید جستجوی درس‌ها، درس موردنظر را یافته و بعنوان میهمان آن را مطالعه نموده و یا درصورت داشتن مجوز، خودتان را در آن ثبت‌نام نمایید. ",
+    "selfenrolment": "ثبت‌نام خود",
+    "sendpaymentbutton": "پرداخت با پی‌پال",
     "sortbycourses": "مرتب‌سازی بر اساس درس‌ها",
     "sortbydates": "مرتب‌سازی بر اساس تاریخ‌ها",
     "timeline": "جدول زمانی",
